Writing report findings for each problem

--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -10,15 +10,14 @@ forms received by the United States Post Office in New York City between
 2018 and 2022. They include the total number of COAs to and from each
 NYC zip code for each month of those 5 years. These COAs are filed by
 people who are moving to ensure that mail is delivered to their new
-address. There is another dataset being worked on that includes zipcode,
-neighborhood, and county data for New York City.
+address.
 
-## Problem 1
+## Problem-1
 
 Given that in some cases the borough name and the county name differ, a
-dataset with neighborhood data called `zipcodes` is imported and tidied.
-A new variable `borough` is created in this dataset to accurately
-reflect where borough each zipcode is located in.
+dataset with neighborhood data called `zipcodes` is imported and tidied
+to clarify. A new variable `borough` is created in this dataset to
+accurately reflect the borough each zipcode is located in.
 
 ``` r
 zipcodes = 
@@ -47,57 +46,49 @@ sheet, each sheet is exported and cleaned before being combined via
 `bind_rows` into a dataset called `combined_coa`. Variables
 `total_perm_in` and `total_perm_out`indicate the total number of
 permanent address changes going into and out of each zip code,
-respectively. `month_num` is renamed as `month`. Additionally, a `year`
-variable is created by separating `month` into year, number of the
-corresponding month, and day.
+respectively.
 
 ``` r
 coa_2018 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2018") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
   
 coa_2019 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2019") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names()  #clean var names
    
 coa_2020 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2020") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
 
 coa_2021 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2021") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
 
 coa_2022 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2022") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
 ```
 
 A new variable called `net_change`is created in each annual dataset that
 subtracts each `total_perm_out` from each `total_perm_in` value to
-reflect the increase or decrease in COAs that month and year. `month` is
-recoded as a factor variable and replaced with the names of each month
-instead of a number. Then, all of the annual datasets for COAs data from
-years 2018 and 2022 were bound together and `zipcode` was re-named to
-`zip_code` to match `zipcodes` and allow for merging.
+reflect the increase or decrease in COAs that month and year.
+`month_num` is renamed as `month`, recoded as a factor variable and
+replaced with month names. Variable `year` is created by separating
+`month` into year, name of month, and day. Then, all of the annual
+datasets for COAs data from years 2018 and 2022 were bound together and
+`zipcode` was re-named to `zip_code` to match `zipcodes` and allow for
+merging.
 
 ``` r
 combined_coa =
-    bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022) |>
-  rename("zip_code"="zipcode") |> 
+    bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022) |> 
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year variable
+  rename(month = month_num) |> #rename month 
+  rename("zip_code"="zipcode") |> #rename zipcode
   mutate(
   net_change = total_perm_in - total_perm_out, #Create net_change var 
-  month = case_match(month,
+  month = case_match(month, #rename month variable with month names
       1 ~ "January",
       2 ~ "February",
       3 ~ "March",
@@ -110,8 +101,8 @@ combined_coa =
       10 ~ "October",
       11 ~ "November",
       12 ~ "December"),
-  month = as.factor(month) #recode month into month names
-)#combine COA data from all sheets belonging to different years
+  month = as.factor(month) #recode as factor variable
+) 
 ```
 
 Merging `combined_coa` with `zipcodes`:
@@ -150,6 +141,7 @@ merged_coazips |>
   count(city) |> 
   mutate(rank = min_rank(desc(n))) |> 
   arrange(desc(n)) |>
+  slice(1:6) |>
   knitr::kable()
 ```
 
@@ -161,11 +153,11 @@ merged_coazips |>
 | CANAL STREET     |    4 |    4 |
 | ROOSEVELT ISL    |    4 |    4 |
 | ROOSEVELT ISLAND |    4 |    4 |
-| BOWLING GREEN    |    1 |    7 |
-| BROOKLYN HEIGHTS |    1 |    7 |
-| NYC              |    1 |    7 |
-| SECHEDATY        |    1 |    7 |
-| WALL STREET      |    1 |    7 |
+
+Manhattan is in New York City and everyone who selected Manhattan should
+have New York as its city. While its the most common city, 60 and 59
+COAs have Bronx and Brookyln respectively as their city within
+Manhattan, which is not accurate.
 
 ### This table shows the most common cities represented in the data from Queens.
 
@@ -175,93 +167,33 @@ merged_coazips |>
   count(city) |> 
   mutate(rank = min_rank(desc(n))) |> 
   arrange(desc(n)) |>
+  slice(1:5) |>
   knitr::kable()
 ```
 
-| city                |   n | rank |
-|:--------------------|----:|-----:|
-| JAMAICA             | 372 |    1 |
-| FLUSHING            | 309 |    2 |
-| ASTORIA             | 230 |    3 |
-| QUEENS VILLAGE      | 165 |    4 |
-| BAYSIDE             | 135 |    5 |
-| LONG ISLAND CITY    | 120 |    6 |
-| EAST ELMHURST       | 117 |    7 |
-| OZONE PARK          | 116 |    8 |
-| FRESH MEADOWS       | 107 |    9 |
-| FAR ROCKAWAY        | 102 |   10 |
-| LITTLE NECK         |  79 |   11 |
-| RIDGEWOOD           |  70 |   12 |
-| FLORAL PARK         |  68 |   13 |
-| ELMHURST            |  63 |   14 |
-| KEW GARDENS         |  62 |   15 |
-| BELLEROSE           |  60 |   16 |
-| BROOKLYN            |  60 |   16 |
-| COLLEGE POINT       |  60 |   16 |
-| CORONA              |  60 |   16 |
-| HOWARD BEACH        |  60 |   16 |
-| REGO PARK           |  60 |   16 |
-| FOREST HILLS        |  59 |   22 |
-| HOLLIS              |  59 |   22 |
-| ROSEDALE            |  59 |   22 |
-| WOODHAVEN           |  59 |   22 |
-| WOODSIDE            |  59 |   22 |
-| CAMBRIA HEIGHTS     |  58 |   27 |
-| MASPETH             |  58 |   27 |
-| MIDDLE VILLAGE      |  58 |   27 |
-| SAINT ALBANS        |  57 |   30 |
-| ARVERNE             |  56 |   31 |
-| JACKSON HEIGHTS     |  56 |   31 |
-| WHITESTONE          |  55 |   33 |
-| RICHMOND HILL       |  54 |   34 |
-| GLEN OAKS           |  52 |   35 |
-| SUNNYSIDE           |  51 |   36 |
-| ROCKAWAY BEACH      |  49 |   37 |
-| SOUTH OZONE PARK    |  49 |   37 |
-| BREEZY POINT        |  47 |   39 |
-| SOUTH RICHMOND HILL |  47 |   39 |
-| ROCKAWAY PARK       |  40 |   41 |
-| DOUGLASTON          |  39 |   42 |
-| OAKLAND GARDENS     |  38 |   43 |
-| SPRINGFIELD GARDENS |  30 |   44 |
-| LAURELTON           |  28 |   45 |
-| LONG IS CITY        |  19 |   46 |
-| BRIARWOOD           |  16 |   47 |
-| ROCKAWAY POINT      |  13 |   48 |
-| BELLE HARBOR        |  11 |   49 |
-| GLENDALE            |  11 |   49 |
-| S RICHMOND HL       |   9 |   51 |
-| QUEENS VLG          |   8 |   52 |
-| S OZONE PARK        |   8 |   52 |
-| BAYSIDE HILLS       |   6 |   54 |
-| BROAD CHANNEL       |   5 |   55 |
-| BEECHHURST          |   4 |   56 |
-| KEW GARDENS HILLS   |   4 |   56 |
-| NEPONSIT            |   4 |   56 |
-| AUBURNDALE          |   2 |   59 |
-| BELLEROSE MANOR     |   2 |   59 |
-| SPRNGFLD GDNS       |   2 |   59 |
-| CALVERTON           |   1 |   62 |
-| CAMBRIA HTS         |   1 |   62 |
-| JACKSON HTS         |   1 |   62 |
-| MIDDLE VLG          |   1 |   62 |
-| NEW YORK CITY       |   1 |   62 |
-| ST ALBANS           |   1 |   62 |
+| city           |   n | rank |
+|:---------------|----:|-----:|
+| JAMAICA        | 372 |    1 |
+| FLUSHING       | 309 |    2 |
+| ASTORIA        | 230 |    3 |
+| QUEENS VILLAGE | 165 |    4 |
+| BAYSIDE        | 135 |    5 |
 
-\#?# Comment on the any data quality issues you observe. Everyones city
-of NYC.
+Jamaica, Flushing, and Astoria are the top 3 cities represented in
+Brookyln COAs. These are all neighborhoods within the borough, not
+cities, and are not accurate data points.
 
 There are 60 months between 2018 and 2022, but many ZIP codes have fewer
 than 60 observations; most of these are also missing neighborhood
 values. Discuss why this might be the case, using a few concrete
-examples as illustration. \#?#
+examples as illustration.
 
-## Problem 2
+## Problem-2
 
 This table shows the average change in COAs in each borough and year.
-Across all boroughs, except Staten Island, the average change in COAs is
-the lowest in 2020, showing that there were significantly more changes
-of
+Across all boroughs, except Staten Island, the absolute average change
+in COAs is the highest in 2020, showing the increase in people moving
+out of NYC in 2020 during the COVID-19 pandemic.
 
 ``` r
 merged_coazips |>
@@ -285,8 +217,12 @@ merged_coazips |>
 | Staten Island |  -9.85 |  -9.12 |  -10.54 | -22.55 | -16.30 |
 | The Bronx     | -46.30 | -48.02 |  -72.65 | -66.10 | -53.19 |
 
-This table shows, across all observed data, the five lowest values of
-net_change, including ZIP code, neighborhood, and the year and month.
+This table shows the five lowest values of average change in COAs and
+they are all negative values. The zipcodes are all in the neighborhoods
+Gramercy Park/Murray Hill and the Lower East Side. These experienced the
+highest number of move-outs relative to move-ins. These are all in the
+immediate aftermath of the onset of the COVID-19 pandemic between
+May-July 2020.
 
 ``` r
 merged_coazips |>
@@ -304,9 +240,11 @@ merged_coazips |>
 |    10016 | Gramercy Park and Murray Hill | July  | 2020 |       -855 |
 |    10009 | Lower East Side               | June  | 2020 |       -804 |
 
-This table shows, across data observed before 2020, the five highest
-values of net_change, including ZIP code, neighborhood, and the year and
-month.
+This table shows the five highest values of average change in COAs
+before 2020 and they are all positive values, showing neighborhoods that
+experienced the most move-ins relative to move-outs. These highest
+values are in April-July 2018 and range from neighborhoods in Queens,
+Manhattan and Brookyln.
 
 ``` r
 merged_coazips |>
