--- a/p8105_mtp_lvr2115.Rmd
+++ b/p8105_mtp_lvr2115.Rmd
@@ -12,11 +12,11 @@ library(dplyr)
 ```
 
 # Introduction
-The data being imported and cleaned are from Change of Address (COAs) forms received by the United States Post Office in New York City between 2018 and 2022. They include the total number of COAs to and from each NYC zip code for each month of those 5 years.  These COAs are filed by people who are moving to ensure that mail is delivered to their new address. There is another dataset being worked on that includes zipcode, neighborhood, and county data for New York City. 
+The data being imported and cleaned are from Change of Address (COAs) forms received by the United States Post Office in New York City between 2018 and 2022. They include the total number of COAs to and from each NYC zip code for each month of those 5 years.  These COAs are filed by people who are moving to ensure that mail is delivered to their new address.
 
-## Problem 1
+## Problem-1
 
-Given that in some cases the borough name and the county name differ, a dataset with neighborhood data called `zipcodes` is imported and tidied. A new variable `borough` is created in this dataset to accurately reflect where borough each zipcode is located in. 
+Given that in some cases the borough name and the county name differ, a dataset with neighborhood data called `zipcodes` is imported and tidied to clarify. A new variable `borough` is created in this dataset to accurately reflect the borough each zipcode is located in. 
 
 ```{r import and tidy zipcodes, warning=FALSE}
 zipcodes = 
@@ -31,49 +31,41 @@ zipcodes =
 )
 ```
 
-Given that the data from COAs for each year is in a different Excel sheet, each sheet is exported and cleaned before being combined via `bind_rows` into a dataset called `combined_coa`. Variables `total_perm_in` and `total_perm_out`indicate the total number of permanent address changes going into and out of each zip code, respectively. `month_num` is renamed as `month`. Additionally, a `year` variable is created by separating `month` into year, number of the corresponding month, and day. 
+Given that the data from COAs for each year is in a different Excel sheet, each sheet is exported and cleaned before being combined via `bind_rows` into a dataset called `combined_coa`. Variables `total_perm_in` and `total_perm_out`indicate the total number of permanent address changes going into and out of each zip code, respectively. 
 
 ```{r import and tidy COAs}
 coa_2018 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2018") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
   
 coa_2019 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2019") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names()  #clean var names
    
 coa_2020 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2020") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
 
 coa_2021 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2021") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
 
 coa_2022 = 
   readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2022") |> #import dataset
-  janitor::clean_names() |> #clean var names
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
-  rename(month = month_num) #create year var
+  janitor::clean_names() #clean var names
 ```
 
-A new variable called `net_change`is created in each annual dataset that subtracts each `total_perm_out` from each `total_perm_in` value to reflect the increase or decrease in COAs that month and year. `month` is recoded as a factor variable and replaced with the names of each month instead of a number. Then, all of the annual datasets for COAs data from years 2018 and 2022 were bound together and `zipcode` was re-named to `zip_code` to match `zipcodes` and allow for merging. 
+A new variable called `net_change`is created in each annual dataset that subtracts each `total_perm_out` from each `total_perm_in` value to reflect the increase or decrease in COAs that month and year. `month_num` is renamed as `month`, recoded as a factor variable and replaced with month names. Variable `year` is created by separating `month` into year, name of month, and day. Then, all of the annual datasets for COAs data from years 2018 and 2022 were bound together and `zipcode` was re-named to `zip_code` to match `zipcodes` and allow for merging. 
 
 ```{r combine COAs }
 combined_coa =
-	bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022) |>
-  rename("zip_code"="zipcode") |> 
+	bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022) |> 
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year variable
+  rename(month = month_num) |> #rename month 
+  rename("zip_code"="zipcode") |> #rename zipcode
   mutate(
   net_change = total_perm_in - total_perm_out, #Create net_change var 
-  month = case_match(month,
+  month = case_match(month, #rename month variable with month names
       1 ~ "January",
       2 ~ "February",
       3 ~ "March",
@@ -86,8 +78,8 @@ combined_coa =
       10 ~ "October",
       11 ~ "November",
       12 ~ "December"),
-  month = as.factor(month) #recode month into month names
-)#combine COA data from all sheets belonging to different years
+  month = as.factor(month) #recode as factor variable
+) 
 ```
 
 Merging  `combined_coa` with  `zipcodes`:
@@ -112,8 +104,11 @@ merged_coazips |>
   count(city) |> 
   mutate(rank = min_rank(desc(n))) |> 
   arrange(desc(n)) |>
+  slice(1:6) |>
   knitr::kable()
 ```
+
+Manhattan is in New York City and everyone who selected Manhattan should have New York as its city. While its the most common city, 60 and 59 COAs have Bronx and Brookyln respectively as their city within Manhattan, which is not accurate. 
 
 ### This table shows the most common cities represented in the data from Queens.
 
@@ -123,17 +118,17 @@ merged_coazips |>
   count(city) |> 
   mutate(rank = min_rank(desc(n))) |> 
   arrange(desc(n)) |>
+  slice(1:5) |>
   knitr::kable()
 ```
-#?#
-Comment on the any data quality issues you observe. Everyones city of NYC.
+ 
+Jamaica, Flushing, and Astoria are the top 3 cities represented in Brookyln COAs. These are all neighborhoods within the borough, not cities, and are not accurate data points.
 
 There are 60 months between 2018 and 2022, but many ZIP codes have fewer than 60 observations; most of these are also missing neighborhood values. Discuss why this might be the case, using a few concrete examples as illustration. 
-#?#
 
-## Problem 2
+## Problem-2
 
-This table shows the average change in COAs in each borough and year. Across all boroughs, except Staten Island, the average change in COAs is the lowest in 2020, showing that there were significantly more changes of 
+This table shows the average change in COAs in each borough and year. Across all boroughs, except Staten Island, the absolute average change in COAs is the highest in 2020, showing the increase in people moving out of NYC in 2020 during the COVID-19 pandemic.
 
 ```{r}
 merged_coazips |>
@@ -146,7 +141,7 @@ merged_coazips |>
   knitr::kable(digits = 2)
 ```
 
-This table shows, across all observed data, the five lowest values of net_change, including ZIP code, neighborhood, and the year and month.
+This table shows the five lowest values of average change in COAs and they are all negative values. The zipcodes are all in the neighborhoods Gramercy Park/Murray Hill and the Lower East Side. These experienced the highest number of move-outs relative to move-ins. These are all in the immediate aftermath of the onset of the COVID-19 pandemic between May-July 2020.  
 
 ```{r}
 merged_coazips |>
@@ -156,7 +151,7 @@ merged_coazips |>
   knitr::kable()
 ```
 
-This table shows, across data observed before 2020, the five highest values of net_change, including ZIP code, neighborhood, and the year and month.
+This table shows the five highest values of average change in COAs before 2020 and they are all positive values, showing neighborhoods that experienced the most move-ins relative to move-outs. These highest values are in April-July 2018 and range from neighborhoods in Queens, Manhattan and Brookyln. 
 
 ```{r}
 merged_coazips |>
