--- a/p8105_mtp_lvr2115.Rmd
+++ b/p8105_mtp_lvr2115.Rmd
@@ -12,11 +12,11 @@ library(dplyr)
 ```
 
 # Introduction
-The data being imported and cleaned are from Change of Address (COAs) forms received by the United States Post Office in New York City between 2018 and 2022. They include the total number of COAs to and from each NYC zip code for each month of those 5 years.  These COAs are filed by people who are moving to ensure that mail is delivered to their new address.
+The data are from Change of Address (COAs) forms received by the United States Post Office in New York City between 2018 and 2022. They include the total number of COAs to and from each NYC zip code for each month of those 5 years.  These COAs are filed by people who are moving to ensure that mail is delivered to their new address.
 
 ## Problem-1
 
-Given that in some cases the borough name and the county name differ, a dataset with neighborhood data called `zipcodes` is imported and tidied to clarify. A new variable `borough` is created in this dataset to accurately reflect the borough each zipcode is located in. 
+Given that in some cases the borough name and the county name differ, a dataset with neighborhood data called `zipcodes` is imported to clarify. A new variable `borough` is created in this dataset to accurately reflect the borough each zipcode is located in. 
 
 ```{r import and tidy zipcodes, warning=FALSE}
 zipcodes = 
@@ -31,7 +31,7 @@ zipcodes =
 )
 ```
 
-Given that the data from COAs for each year is in a different Excel sheet, each sheet is exported and cleaned before being combined via `bind_rows` into a dataset called `combined_coa`. Variables `total_perm_in` and `total_perm_out`indicate the total number of permanent address changes going into and out of each zip code, respectively. 
+Each sheet containing COA data from each year is exported and variable names cleaned before being combined. Variables `total_perm_in` and `total_perm_out`indicate the total number of permanent address changes going into and out of each zip code, respectively. 
 
 ```{r import and tidy COAs}
 coa_2018 = 
@@ -55,7 +55,7 @@ coa_2022 =
   janitor::clean_names() #clean var names
 ```
 
-A new variable called `net_change`is created in each annual dataset that subtracts each `total_perm_out` from each `total_perm_in` value to reflect the increase or decrease in COAs that month and year. `month_num` is renamed as `month`, recoded as a factor variable and replaced with month names. Variable `year` is created by separating `month` into year, name of month, and day. Then, all of the annual datasets for COAs data from years 2018 and 2022 were bound together and `zipcode` was re-named to `zip_code` to match `zipcodes` and allow for merging. 
+A new variable called `net_change`is created in each annual dataset that subtracts each `total_perm_out` from each `total_perm_in` value to reflect the increase or decrease in COAs that month and year. `month_num` is renamed as `month`, recoded as a factor variable and replaced with month names. Variable `year` is created by separating `month` into year, name of month, and day. Then, all of the annual datasets for COAs data from years 2018 and 2022 were bound together using `bind_rows` into a dataset called `combined_coa`. `zipcode` was re-named to `zip_code` to match `zipcodes` and allow for merging. 
 
 ```{r combine COAs }
 combined_coa =
@@ -82,7 +82,7 @@ combined_coa =
 ) 
 ```
 
-Merging  `combined_coa` with  `zipcodes`:
+Merging  `combined_coa` with  `zipcodes`
 
 ```{r merge COA with zipcode data}
 merged_coazips = 
@@ -151,7 +151,7 @@ merged_coazips |>
   knitr::kable()
 ```
 
-This table shows the five highest values of average change in COAs before 2020 and they are all positive values, showing neighborhoods that experienced the most move-ins relative to move-outs. These highest values are in April-July 2018 and range from neighborhoods in Queens, Manhattan and Brookyln. 
+This table shows the five highest values of average change in COAs before 2020, showing neighborhoods that experienced the most move-ins relative to move-outs. These highest values are in April-July 2018 and range from neighborhoods in Queens, Manhattan and Brookyln. 
 
 ```{r}
 merged_coazips |>
@@ -162,7 +162,7 @@ merged_coazips |>
   knitr::kable()
 ```
 
-This plot shows neighborhood-level average net_change values (i.e. averaging across ZIP codes within neighborhoods) against month over all five years. Your plot should facilitate comparisons across boroughs. Will this work? OR no? 
+This plot shows neighborhood-level average net_change values against month over all five years. Your plot should facilitate comparisons across boroughs.
 
 ```{r}
 neighborhood_avg =
