--- a/p8105_mtp_lvr2115.Rmd
+++ b/p8105_mtp_lvr2115.Rmd
@@ -12,11 +12,11 @@ library(dplyr)
 ```
 
 # Introduction
-The data are from Change of Address (COAs) forms received by the United States Post Office in New York City between 2018 and 2022. They include the total number of COAs to and from each NYC zip code for each month of those 5 years.  These COAs are filed by people who are moving to ensure that mail is delivered to their new address.
+The data are from Change of Address (COAs) forms received by USPS in NYC between 2018 and 2022. They include the total number of COAs to and from each NYC zip code for each month of those 5 years.  These COAs are filed by people who are moving to ensure that mail is delivered to their new address. The goal of this report is to import and tidy the data, and then complete some exploratory analysis and visualizations for it. 
 
 ## Problem-1
 
-Given that in some cases the borough name and the county name differ, a dataset with neighborhood data called `zipcodes` is imported to clarify. A new variable `borough` is created in this dataset to accurately reflect the borough each zipcode is located in. 
+A dataset with neighborhood data called `zipcodes` is imported to clarify where borough and county names may differ. A new variable `borough` is created in this dataset to accurately reflect the borough each zipcode is located in. 
 
 ```{r import and tidy zipcodes, warning=FALSE}
 zipcodes = 
@@ -31,7 +31,7 @@ zipcodes =
 )
 ```
 
-Each sheet containing COA data from each year is exported and variable names cleaned before being combined. Variables `total_perm_in` and `total_perm_out`indicate the total number of permanent address changes going into and out of each zip code, respectively. 
+Each sheet containing COA data from each year is exported and variable names cleaned. Variables `total_perm_in` and `total_perm_out`indicate the total number of permanent address changes going into and out of each zip code.
 
 ```{r import and tidy COAs}
 coa_2018 = 
@@ -55,7 +55,7 @@ coa_2022 =
   janitor::clean_names() #clean var names
 ```
 
-A new variable called `net_change`is created in each annual dataset that subtracts each `total_perm_out` from each `total_perm_in` value to reflect the increase or decrease in COAs that month and year. `month_num` is renamed as `month`, recoded as a factor variable and replaced with month names. Variable `year` is created by separating `month` into year, name of month, and day. Then, all of the annual datasets for COAs data from years 2018 and 2022 were bound together using `bind_rows` into a dataset called `combined_coa`. `zipcode` was re-named to `zip_code` to match `zipcodes` and allow for merging. 
+A new variable called `net_change`is created that subtracts each `total_perm_out` from each `total_perm_in` value to reflect the increase or decrease in COAs that month and year. `month_num` is renamed as `month`, recoded as a factor variable and replaced with month names. Variable `year` is created by separating `month` into year, name of month, and day. Then, all of the annual COAs data from years 2018 and 2022 were bound together using `bind_rows` into a dataset called `combined_coa`. `zipcode` was re-named to `zip_code` to match `zipcodes` and allow for merging. 
 
 ```{r combine COAs }
 combined_coa =
@@ -82,8 +82,6 @@ combined_coa =
 ) 
 ```
 
-Merging  `combined_coa` with  `zipcodes`
-
 ```{r merge COA with zipcode data}
 merged_coazips = 
   inner_join(zipcodes, combined_coa, by="zip_code") |> #merge COA with zipcode datasets 
@@ -92,7 +90,7 @@ merged_coazips =
 str(merged_coazips) 
 ```
 
-The final tidy dataset  `merged_coazips` has `r nrow(merged_coazips)` observations and `r ncol(merged_coazips)` variables and tells us about the net change in COAs for a given year from years 2018 to 2022. 
+The final tidy dataset `merged_coazips` has `r nrow(merged_coazips)` observations and `r ncol(merged_coazips)` variables and tells us about the net change in COAs for a given year from years 2018 to 2022. 
 
 In the merged dataset total, there are `r merged_coazips |> select(zip_code) |> distinct() |> count()` zipcodes found and  `r merged_coazips |> select(neighborhood) |> distinct() |> count()` unique neighborhoods. 
 
@@ -124,11 +122,12 @@ merged_coazips |>
  
 Jamaica, Flushing, and Astoria are the top 3 cities represented in Brookyln COAs. These are all neighborhoods within the borough, not cities, and are not accurate data points.
 
-There are 60 months between 2018 and 2022, but many ZIP codes have fewer than 60 observations; most of these are also missing neighborhood values. Discuss why this might be the case, using a few concrete examples as illustration. 
+# There are 60 months between 2018 and 2022, but many ZIP codes have fewer than 60 observations; most of these are also missing neighborhood values. Discuss why this might be the case, using a few concrete examples as illustration. 
+
 
 ## Problem-2
 
-This table shows the average change in COAs in each borough and year. Across all boroughs, except Staten Island, the absolute average change in COAs is the highest in 2020, showing the increase in people moving out of NYC in 2020 during the COVID-19 pandemic.
+Across all boroughs, except Staten Island, the absolute average change in COAs is the highest in 2020, showing an increase in people moving out of NYC in 2020 during the COVID-19 pandemic.
 
 ```{r}
 merged_coazips |>
@@ -141,7 +140,7 @@ merged_coazips |>
   knitr::kable(digits = 2)
 ```
 
-This table shows the five lowest values of average change in COAs and they are all negative values. The zipcodes are all in the neighborhoods Gramercy Park/Murray Hill and the Lower East Side. These experienced the highest number of move-outs relative to move-ins. These are all in the immediate aftermath of the onset of the COVID-19 pandemic between May-July 2020.  
+This table shows the five lowest values of average change in COAs and they are all negative values. The zipcodes are all in the neighborhoods Gramercy Park/Murray Hill and the Lower East Side. These experienced the highest number of move-outs relative to move-ins. These are all at the onset of the COVID-19 pandemic between May-July 2020.  
 
 ```{r}
 merged_coazips |>
@@ -162,17 +161,26 @@ merged_coazips |>
   knitr::kable()
 ```
 
-This plot shows neighborhood-level average net_change values against month over all five years. Your plot should facilitate comparisons across boroughs.
+This plot shows neighborhood-level average net_change values against month over all five years across the boroughs.
 
 ```{r}
-neighborhood_avg =
+neighborhood_avg_plot =
   merged_coazips |> 
-  group_by(borough, neighborhood, month) |> 
+  group_by(borough, neighborhood, month, year) |> 
   summarize(avg_net_change = mean(net_change, na.rm = TRUE))
 
-neighborhood_avg |> 
-  ggplot(aes(x = month, y = avg_net_change, color = borough)) + 
-  geom_line() +
-  labs(x = "Month", y = "Average Net Change", title = "Neighborhood-Level Average Net Change Over Time") +
-  theme(axis.text.x = element_text(angle=90, vjust=0.5, hjust=1)) 
+neighborhood_avg_plot |>
+  mutate(month = factor(month, levels = month.name, ordered = TRUE)) |> 
+  ggplot(aes(x = month, y = avg_net_change, color = borough, group = neighborhood)) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~borough) +
+  labs(
+    x = "Month", 
+    y = "Average Net Change",
+    title = "Neighborhood-Level Average Net Change Over Time"
+  ) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+
 ```
+
+# Zip-code level data may not be truly representative of population changes as zipcodes represent more than one neighborhood at times, which may have different population changes. 
