--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -5,19 +5,17 @@ Laura Robles-Torres
 
 # Introduction
 
-The data are from Change of Address (COAs) forms received by USPS in NYC
-between 2018 and 2022. They include the total number of COAs to and from
-each NYC zip code for each month of those 5 years. These COAs are filed
-by people who are moving to ensure that mail is delivered to their new
-address. The goal of this report is to import and tidy the data, and
-then complete some exploratory analysis and visualizations for it.
+The Excel file ‘USPS Change of Address NYC’ contains Change of Address
+(COAs) forms received by USPS in NYC between 2018 and 2022. They include
+the total number of COAs to and from each NYC zip code for each month of
+those 5 years. The goal of this report is to import and tidy the data,
+and then complete some exploratory analysis and visualizations for it.
 
 ## Problem-1
 
-A dataset with neighborhood data called `zipcodes` is imported to
-clarify where borough and county names may differ. A new variable
-`borough` is created in this dataset to accurately reflect the borough
-each zipcode is located in.
+`zipcodes` datafile is imported to clarify where borough and county
+names may differ. A new variable `borough` is created in this dataset to
+accurately reflect the borough each zipcode is located in.
 
 ``` r
 zipcodes = 
@@ -68,15 +66,13 @@ coa_2022 =
   janitor::clean_names() #clean var names
 ```
 
-A new variable called `net_change`is created that subtracts each
-`total_perm_out` from each `total_perm_in` value to reflect the increase
-or decrease in COAs that month and year. `month_num` is renamed as
-`month`, recoded as a factor variable and replaced with month names.
-Variable `year` is created by separating `month` into year, name of
-month, and day. Then, all of the annual COAs data from years 2018 and
-2022 were bound together using `bind_rows` into a dataset called
-`combined_coa`. `zipcode` was re-named to `zip_code` to match `zipcodes`
-and allow for merging.
+`net_change`is created that subtracts each `total_perm_out` from each
+`total_perm_in` value to reflect the change in COAs that month and year.
+`month_num` is renamed as `month` and replaced with month names instead
+of numbers. `year` is created by separating `month` into year, name of
+month, and day. All of the annual COAs data were bound together using
+`bind_rows` into a dataset called `combined_coa`. `zipcode` was re-named
+to `zip_code` to match `zipcodes` and allow for merging.
 
 ``` r
 combined_coa =
@@ -179,7 +175,40 @@ Jamaica, Flushing, and Astoria are the top 3 cities represented in
 Brookyln COAs. These are all neighborhoods within the borough, not
 cities, and are not accurate data points.
 
-# There are 60 months between 2018 and 2022, but many ZIP codes have fewer than 60 observations; most of these are also missing neighborhood values. Discuss why this might be the case, using a few concrete examples as illustration.
+### These are the zipcodes with less than 60 observations, most of which are also missing neighborhood values.
+
+This may be the case because some COAs may not include neighborhood as
+many individuals would choose to leave it blank. There may be not be 12
+observations for a given neighborhood every year if no COA forms are
+submitted on a given month of the year.
+
+``` r
+#These are the zipcodes with less than 60 observations, most of which are also missing neighborhood values. 
+merged_coazips |>
+  group_by(zip_code, neighborhood) |>
+  summarize(n_obs = n()) |>
+  filter(n_obs<60) |>
+  arrange(desc(n_obs))
+```
+
+    ## `summarise()` has grouped output by 'zip_code'. You can override using the
+    ## `.groups` argument.
+
+    ## # A tibble: 58 × 3
+    ## # Groups:   zip_code [58]
+    ##    zip_code neighborhood             n_obs
+    ##       <dbl> <chr>                    <int>
+    ##  1    10116 <NA>                        59
+    ##  2    10150 <NA>                        59
+    ##  3    10301 Stapleton and St. George    59
+    ##  4    10020 Chelsea and Clinton         58
+    ##  5    10162 <NA>                        57
+    ##  6    11202 <NA>                        56
+    ##  7    10008 <NA>                        54
+    ##  8    11431 <NA>                        54
+    ##  9    10101 <NA>                        52
+    ## 10    10185 <NA>                        45
+    ## # ℹ 48 more rows
 
 ## Problem-2
 
@@ -209,11 +238,11 @@ merged_coazips |>
 | Staten Island |  -9.85 |  -9.12 |  -10.54 | -22.55 | -16.30 |
 | The Bronx     | -46.30 | -48.02 |  -72.65 | -66.10 | -53.19 |
 
-This table shows the five lowest values of average change in COAs and
-they are all negative values. The zipcodes are all in the neighborhoods
-Gramercy Park/Murray Hill and the Lower East Side. These experienced the
-highest number of move-outs relative to move-ins. These are all at the
-onset of the COVID-19 pandemic between May-July 2020.
+This table shows the five lowest values of average change in COAs. The
+zipcodes are all in Gramercy Park/Murray Hill and the Lower East Side.
+These experienced the highest number of move-outs relative to move-ins.
+These are all at the onset of the COVID-19 pandemic between May-July
+2020.
 
 ``` r
 merged_coazips |>
@@ -282,6 +311,9 @@ neighborhood_avg_plot |>
 
     ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
-![](p8105_mtp_lvr2115_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+![](p8105_mtp_lvr2115_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 
-# Zip-code level data may not be truly representative of population changes as zipcodes represent more than one neighborhood at times, which may have different population changes.
+Zip-code level data may not be truly representative of population
+changes as zipcodes represent more than one neighborhood, which may have
+different trends. Zip code lines may also changed over time, which
+affects how we compare changes from year to year.
