--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -19,14 +19,14 @@ accurately reflect the borough each zipcode is located in.
 
 ``` r
 zipcodes = 
-  read_csv("./zip codes.csv") |> #import dataset
-  janitor::clean_names() |> #clean var names
+  read_csv("./zip codes.csv") |> 
+  janitor::clean_names() |> 
   mutate(
     borough = recode(county_name, 
                      "Bronx" = "The Bronx",
                      "Kings" = "Brooklyn",
                      "New York" = "Manhattan",
-                     "Richmond" = "Staten Island") #create borough var based on county
+                     "Richmond" = "Staten Island")
 )
 ```
 
@@ -46,24 +46,24 @@ zip code.
 
 ``` r
 coa_2018 = 
-  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2018") |> #import dataset
-  janitor::clean_names() #clean var names
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2018") |> 
+  janitor::clean_names() 
   
 coa_2019 = 
-  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2019") |> #import dataset
-  janitor::clean_names()  #clean var names
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2019") |> 
+  janitor::clean_names()  
    
 coa_2020 = 
-  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2020") |> #import dataset
-  janitor::clean_names() #clean var names
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2020") |> 
+  janitor::clean_names() 
 
 coa_2021 = 
-  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2021") |> #import dataset
-  janitor::clean_names() #clean var names
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2021") |> 
+  janitor::clean_names() 
 
 coa_2022 = 
-  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2022") |> #import dataset
-  janitor::clean_names() #clean var names
+  readxl::read_excel("./USPS CHANGE OF ADDRESS NYC.xlsx", sheet = "2022") |> 
+  janitor::clean_names() 
 ```
 
 `net_change`is created that subtracts each `total_perm_out` from each
@@ -77,12 +77,12 @@ to `zip_code` to match `zipcodes` and allow for merging.
 ``` r
 combined_coa =
     bind_rows(coa_2018, coa_2019, coa_2020,coa_2021,coa_2022) |> 
-  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> #create year variable
-  rename(month = month_num) |> #rename month 
-  rename("zip_code"="zipcode") |> #rename zipcode
+  separate(month, into = c("year", "month_num", "day"), convert = TRUE) |> 
+  rename(month = month_num) |> 
+  rename("zip_code"="zipcode") |> 
   mutate(
-  net_change = total_perm_in - total_perm_out, #Create net_change var 
-  month = case_match(month, #rename month variable with month names
+  net_change = total_perm_in - total_perm_out, 
+  month = case_match(month, 
       1 ~ "January",
       2 ~ "February",
       3 ~ "March",
@@ -95,13 +95,13 @@ combined_coa =
       10 ~ "October",
       11 ~ "November",
       12 ~ "December"),
-  month = as.factor(month) #recode as factor variable
+  month = as.factor(month)
 ) 
 ```
 
 ``` r
 merged_coazips = 
-  inner_join(zipcodes, combined_coa, by="zip_code") |> #merge COA with zipcode datasets 
+  inner_join(zipcodes, combined_coa, by="zip_code") |> 
   select(everything(), -county_name, -state_fips, -file_date, -day, -starts_with("county")) 
 
 str(merged_coazips) 
@@ -238,11 +238,10 @@ merged_coazips |>
 | Staten Island |  -9.85 |  -9.12 |  -10.54 | -22.55 | -16.30 |
 | The Bronx     | -46.30 | -48.02 |  -72.65 | -66.10 | -53.19 |
 
-This table shows the five lowest values of average change in COAs. The
-zipcodes are all in Gramercy Park/Murray Hill and the Lower East Side.
-These experienced the highest number of move-outs relative to move-ins.
-These are all at the onset of the COVID-19 pandemic between May-July
-2020.
+The zipcodes are all in Gramercy Park/Murray Hill and the Lower East
+Side. These experienced the highest number of move-outs relative to
+move-ins. These are all at the onset of the COVID-19 pandemic between
+May-July 2020.
 
 ``` r
 merged_coazips |>
@@ -260,10 +259,10 @@ merged_coazips |>
 |    10016 | Gramercy Park and Murray Hill | July  | 2020 |       -855 |
 |    10009 | Lower East Side               | June  | 2020 |       -804 |
 
-This table shows the five highest values of average change in COAs
-before 2020, showing neighborhoods that experienced the most move-ins
-relative to move-outs. These highest values are in April-July 2018 and
-range from neighborhoods in Queens, Manhattan and Brookyln.
+This table shows neighborhoods that experienced the most move-ins
+relative to move-outs before 2020. These highest values are in
+April-July 2018 and range from neighborhoods in Queens, Manhattan and
+Brookyln.
 
 ``` r
 merged_coazips |>
