--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -5,17 +5,17 @@ Laura Robles-Torres
 
 # Introduction
 
-The Excel file ‘USPS Change of Address NYC’ contains Change of Address
-(COAs) forms received by USPS in NYC between 2018 and 2022. They include
-the total number of COAs to and from each NYC zip code for each month of
+The file ‘USPS Change of Address NYC’ contains Change of Address (COAs)
+forms received by USPS in NYC between 2018 and 2022. They include the
+total number of COAs to and from each NYC zip code for each month of
 those 5 years. The goal of this report is to import and tidy the data,
 and then complete some exploratory analysis and visualizations for it.
 
 ## Problem-1
 
-`zipcodes` datafile is imported to clarify where borough and county
-names may differ. A new variable `borough` is created in this dataset to
-accurately reflect the borough each zipcode is located in.
+`zipcodes` is imported to clarify where borough and county names may
+differ. `borough` is created in this dataset to accurately reflect the
+borough each zipcode is located in.
 
 ``` r
 zipcodes = 
@@ -39,10 +39,9 @@ zipcodes =
     ## ℹ Use `spec()` to retrieve the full column specification for this data.
     ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-Each sheet containing COA data from each year is exported and variable
-names cleaned. Variables `total_perm_in` and `total_perm_out`indicate
-the total number of permanent address changes going into and out of each
-zip code.
+Each sheet containing COA data from each year is exported and tidied.
+`total_perm_in` and `total_perm_out`indicate the total number of
+permanent address changes going into and out of each zip code.
 
 ``` r
 coa_2018 = 
@@ -118,11 +117,10 @@ str(merged_coazips)
     ##  $ total_perm_in : num [1:12085] 193 172 204 180 228 249 264 277 268 217 ...
     ##  $ net_change    : num [1:12085] -70 -25 -15 -27 -12 29 49 39 59 -2 ...
 
-The final tidy dataset `merged_coazips` has 12085 observations and 9
-variables and tells us about the net change in COAs for a given year
-from years 2018 to 2022.
+`merged_coazips` has 12085 observations and 9 variables and tells us
+about the net change in COAs from 2018 to 2022.
 
-In the merged dataset total, there are 237 zipcodes found and 43 unique
+In the merged dataset, there are 237 zipcodes and 43 unique
 neighborhoods.
 
 ### This table shows the most common cities represented in the data from Manhattan.
@@ -146,10 +144,10 @@ merged_coazips |>
 | ROOSEVELT ISL    |    4 |    4 |
 | ROOSEVELT ISLAND |    4 |    4 |
 
-Manhattan is in New York City and everyone who selected Manhattan should
-have New York as its city. While its the most common city, 60 and 59
-COAs have Bronx and Brookyln respectively as their city within
-Manhattan, which is not accurate.
+While New York is the most common city, 60 and 59 COAs have Bronx and
+Brookyln respectively as their city within Manhattan, which is not
+accurate, since everyone who selected Manhattan should have New York as
+its city.
 
 ### This table shows the most common cities represented in the data from Queens.
 
