Edits to the ggsave command and plotting code chunk to fix error not allowing for knitting.

--- a/p8105_mtp_lvr2115.md
+++ b/p8105_mtp_lvr2115.md
@@ -283,19 +283,19 @@ This plot shows neighborhood-level average net_change values against
 month over all five years across the boroughs.
 
 ``` r
-neighborhood_avg_plot =
+neighborhood_avg =
   merged_coazips |> 
   group_by(borough, neighborhood, month, year) |> 
-  summarize(avg_net_change = mean(net_change, na.rm = TRUE))
+  summarize(avg_net_change = mean(net_change, na.rm = TRUE)) |>
+  mutate(month = factor(month, levels = month.name, ordered = TRUE))
 ```
 
     ## `summarise()` has grouped output by 'borough', 'neighborhood', 'month'. You can
     ## override using the `.groups` argument.
 
 ``` r
-neighborhood_avg_plot |>
-  mutate(month = factor(month, levels = month.name, ordered = TRUE)) |> 
-  ggplot(aes(x = month, y = avg_net_change, color = borough, group = neighborhood)) +
+neighborhood_avg_plot =
+  ggplot(neighborhood_avg, aes(x = month, y = avg_net_change, color = borough, group = neighborhood)) +
   geom_smooth(se = FALSE) +
   facet_grid(. ~borough) +
   labs(
@@ -304,11 +304,19 @@ neighborhood_avg_plot |>
     title = "Neighborhood-Level Average Net Change Over Time"
   ) +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
+
+print(neighborhood_avg_plot)
 ```
 
     ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
 ![](p8105_mtp_lvr2115_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+
+``` r
+ggsave("./results/neighborhood_avg_plot.png", neighborhood_avg_plot, width = 8, height = 5)
+```
+
+    ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
 Zip-code level data may not be truly representative of population
 changes as zipcodes represent more than one neighborhood, which may have
